바꿔봣습니다

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="signup">회원가입</string>
     <string name="success_signup">회원가입 성공</string>
     <string name="failed_signup">회원가입 실패</string>
+
+    <string name="facebook_app_id">553770972225868</string>
+    <string name="fb_login_protocol_scheme">fb553770972225868</string>
+
 </resources>
