Fix attendance check function
- Add skip function of attendance check for those who do not want to check attendance
- Add a function to send text randomly when moving from attendance check activity to Text recognition Activity

- Fix error when pressing back button on Image label activity or text recognition activity
- Fix error when confidence in Image label activity is lower than threshold

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,19 @@
     </string-array>
 
 
+
+    <string-array name ="random_text">
+        <item>passion</item>
+        <item>wish</item>
+        <item>aspiration</item>
+        <item>peace</item>
+        <item>blossom</item>
+        <item>sunshine</item>
+        <item>cherish</item>
+        <item>smile</item>
+        <item>family</item>
+        <item>rainbow</item>
+    </string-array>
+
+
 </resources>
