Add Firebase storage image upload function for Attendance check
사용자 당 최대 5장의 사진을 upload 가능합니다.
5장 초과할 시, 가장 오래된 사진과 새로운 사진이 교체됩니다.

카메라로 직접 촬영하여 등록할 수 있고, 갤러리에서 가져와서 등록할 수 있습니다.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Make To Study</string>
+    <string name="app_name">Make You Study</string>
 
     <string name="email">이메일</string>
     <string name="password">비밀번호</string>
