Add OpenCV for image matching attendance check
OpenCV를 이용한 image matching 출석체크의 경우,
등록되어 있는 image가 존재해야 하기 때문에 등록된 image가 없을경우 등록하도록 유도하기 위해 dialog message를 띄워줍니다.
dialog message에서 '등록하러가기' 클릭 시, image를 등록할 수 있는 profileActivity로 이동합니다.

image matching 출석체크를 실패할 경우,
방금 촬영한 해당 image를 등록해놓을 것인지 물어보는 dialog message를 띄워줍니다.
'등록'을 선택할 경우 해당 image가 등록됩니다.

Skip 기능을 결석기능 외에 출석완료로 skip 할 수 있도록 변경하였습니다.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="fb_login_protocol_scheme">fb553770972225868</string>
 
 
-
     <string-array name="my_header_title">
         <item></item>
         <item>Mon</item>
@@ -39,18 +38,17 @@
     </string-array>
 
 
-
-    <string-array name ="random_text">
-        <item>passion</item>
-        <item>wish</item>
-        <item>aspiration</item>
-        <item>peace</item>
-        <item>blossom</item>
-        <item>sunshine</item>
-        <item>cherish</item>
-        <item>smile</item>
-        <item>family</item>
-        <item>rainbow</item>
+    <string-array name="random_text">
+        <item>Passion</item>
+        <item>Wish</item>
+        <item>Aspiration</item>
+        <item>Peace</item>
+        <item>Blossom</item>
+        <item>Sunshine</item>
+        <item>Cherish</item>
+        <item>Smile</item>
+        <item>Family</item>
+        <item>Rainbow</item>
     </string-array>
 
 
